fix: lower checkout bg lightness to add contrast

--- a/src/pages/Checkout.css
+++ b/src/pages/Checkout.css
@@ -15,7 +15,7 @@ section.checkout {
   min-height: 28rem;
   max-height: 65vh;
 
-  background-color: hsl(0, 0%, 94%);
+  background-color: hsl(0, 0%, 90%);
   box-shadow: 1px 1px 5px 0px rgba(0, 0, 0, 0.35);
 }
 
